acc2 chapter done

--- a/main.bib
+++ b/main.bib
@@ -1,5 +1,5 @@
 % ACC2
-@article{10.1093/nar/gkaa367,
+@article{racek2020acc2,
   author   = {Raček, Tomáš and Schindler, Ondřej and Toušek, Dominik and Horský, Vladimír and Berka, Karel and Koča, Jaroslav and Svobodová, Radka},
   title    = {{Atomic Charge Calculator II: web-based tool for the calculation of partial atomic charges}},
   journal  = {Nucleic Acids Research},
@@ -55,3 +55,28 @@
   doi     = {10.1038/nmeth.4499},
   url     = {https://doi.org/10.1038/nmeth.4499}
 }
+
+% schindler2019thesis
+@mastersthesis{Schindler2019thesis,
+  author = {Schindler, Ondřej},
+  title  = {Empirické metody pro výpočet parciálních atomových nábojů [online]},
+  year   = {2019 [cit. 2023-05-08]},
+  type   = {Diplomová práce},
+  school = {Masarykova univerzita, Přírodovědecká fakulta, Brno},
+  note   = {SUPERVISOR : Tomáš Raček, Radka Svobodová},
+  url    = {https://is.muni.cz/th/ts2kg/}
+}
+
+% wojdyr2022gemmi
+@article{wojdyr2022gemmi,
+  doi       = {10.21105/joss.04200},
+  url       = {https://doi.org/10.21105/joss.04200},
+  year      = {2022},
+  publisher = {The Open Journal},
+  volume    = {7},
+  number    = {73},
+  pages     = {4200},
+  author    = {Marcin Wojdyr},
+  title     = {GEMMI: A library for structural biology},
+  journal   = {Journal of Open Source Software}
+} 
