--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -188,6 +188,11 @@ In contrast to other formats, the mmCIF format does not impose limits on column 
 
 TODO: add example image + better explanation
 
+\section{Alternative conformations}
+\label{section:alternative_conformations}
+
+Alternative conformations, also referred to as conformational isomerism, are different conformations of the same molecule. They can be used to represent different states of a molecule, such as different protonation states or different ligand binding modes. Alternative conformations are important for understanding the structure and function of biomolecules, as they provide insight into how they interact with other molecules.
+
 \section{Partial atomic charges}
 \label{section:partial_atomic_charges}
 
@@ -200,10 +205,20 @@ TODO: visual of electron distribution
 
 \subsection{ChargeFW2}
 \label{subsection:chargfw2}
-\parencite{10.1093/nar/gkaa367}
+
+\parencite{racek2020acc2}
+
+ChargeFW2 is a program for calculating partial atomic charges of molecules. It uses a empirical methods to calculate the charges. It is available as a stand-alone command line program and in a web-based version in ACC2.
 
 \subsection{AlphaCharges}
 \label{subsection:alphacharges}
+
+AlphaCharges ($\alpha\text{Charges}$) is a web application for calculating partial atomic charges of molecules. 
+
+\section{GEMMI}
+\label{section:gemmi}
+
+GEMMI is a cross-platform library that provides various tools useful in the field of structural biology. One of these tools is a parser for the mmCIF format, which is used to read and write mmCIF files. The library is written in C++ and has Python bindings. \parencite{wojdyr2022gemmi}
 
 \section{Color interpolation}
 \label{section:color_interpolation}
@@ -349,7 +364,7 @@ Lastly, the method name used to calculate the charges of a given charge set is s
 \begin{figure}[htbp]
   \caption{Interface of the custom model property for storing partial atomic charges.}
   \label{fig:custom_model_property}
-  \definecolor{LightGray}{gray}{0.9}
+  \definecolor{LightGray}{gray}{0.95}
   \begin{minted}[
   frame=lines,
   framesep=2mm,
@@ -382,6 +397,15 @@ This provider serves as the central component of the extension, with its primary
 For the purposes of this extension, it was necessary to color two structural elements - atoms and residues. For both of these structural elements the charges were retrieved from the provider described in the previous section \ref{subsection:charges_provider}, which provided charges for atoms and residues.
 
 To establish the color for a given charge, two color interpolations are employed: one for negative charges and another for positive charges. Atoms with positive charges receive a color from a white-to-blue color interpolation, while atoms with negative charges are assigned a color from a white-to-red color interpolation. These color interpolations are highlighted in Figure \ref{}. 
+
+\begin{figure}[htbp]
+  \centering
+  \subfigure[Cartoon]{\includegraphics[width=0.45\textwidth]{figures/1F16-cartoon.png}}
+  \subfigure[Ball and stick]{\includegraphics[width=0.45\textwidth]{figures/1F16-bas.png}}
+  \subfigure[Surface]{\includegraphics[width=0.45\textwidth]{figures/1F16-surface.png}}
+  \caption{Partial charges color theme for different visualization types.}
+  \label{fig:partial_charges_color_theme}
+\end{figure}
 
 \subsection{Labels}
 \label{subsection:labels}
@@ -416,6 +440,7 @@ The controls are depicted in Figure \ref{fig:controls-charge-set}.
 After creating the extension, it was integrated into the Mol* library. The extension is integrated in a way that allows the user to simply upload a mmCIF file containing the custom charge categories to the Mol* viewer and the extension will automatically detect the custom categories and display the partial atomic charges. By integrating it into the Mol* library the extension was made freely available to anyone to use
 
 \chapter{Mol* viewer plugin}
+\label{chapter:molstar_viewer_plugin}
 
 TODO: maybe make this a section in chapter about ACC2 \\
 
@@ -428,41 +453,142 @@ The viewer needs extended functionality
 \chapter{Atomic Charge Calculator II}
 \label{chapter:atomic_charge_calculator_ii}
 
-TODO: fix weak link between description of the application and the limitations \\
+Atomic Charge Calculator II (ACC2) is a web application for calculating partial atomic charges for structure files. The application is built using Flask for the backend and Javascript with Bootstrap for the frontend. The core of the ACC2 application is the ChargeFW2 program, which is used to calculate the partial atomic charges. For visualizing the calculation results, the application uses the Litemol software. \parencite{racek2020acc2} However, since the Litemol software is no longer supported, it was necessary to replace it with its modern counterpart, Mol*.
 
-Atomic Charge Calculator II (ACC2) is a web application that calculates partial atomic charges for input structure files. The application is built using Flask for the backend and Javascript with Bootstrap for the frontend. It uses ChargeFW2 to perform the charge calculations and the Litemol viewer to visualize the structures with partial atomic charges. \parencite{10.1093/nar/gkaa367} However, the Litemol viewer has some limitations: it cannot handle multiple charge sets, and more importantly, it is no longer supported. Therefore, it was necessary to update the application to use the Mol* viewer, which enables multiple charge sets through the partial atomic charges extension described in Chapter \ref{chapter:molstar_partial_charges_extension}.
-
-This chapter describes the changes made to the ACC2 application to integrate the Mol* viewer. We first discuss the modifications to the ChargeFW2 output, then explain the changes made to the Flask backend to support multiple charges, and finally describe the frontend updates required to generate multiple charge set calculations.
+This chapter describes the changes made to the ACC2 application. We first discuss the modifications to the ChargeFW2 program, then explain the changes made to the backend and frontend to support calculations of multiple charge sets, and lastly we describe the integration of the Mol* viewer into the ACC2 application.
 
 \section{ChargeFW2 extension}
 \label{section:chargefw2_extension}
 
-As mentioned in \ref{subsection:chargfw2}, ChargeFW2 is a C++ application for calculating partial atomic charges. 
+As discussed in \ref{subsection:chargfw2}, ChargeFW2 is a C++ program for computing partial atomic charges. The program supports the following input file formats: SDF, MOL2, PDB, and mmCIF, all of which are described in Section \ref{section:chemical_file_formats}. The program parses the necessary atom and bond data for each molecule in the input file and stores it in a \texttt{Molecule} object. These objects are then stored in a \texttt{MoleculeSet} object over which the program iterates and calculates the partial atomic charges for each molecule.
 
-To accommodate the specified output file format discussed in section \ref{section:custom_mmcif_categories}, ChargeFW2 required a change to the output mmCIF file format.
+The program outputs the charge results in multiple file formats. The following table \ref{table:chargefw2_output_formats} lists the output file formats generated by ChargeFW2 for the corresponding input file formats.
 
-The charges were appended to the end of the file.
+\begin{table}[htbp]
+  \centering
+  \begin{tabular}{|l|l|}
+    \hline
+    \textbf{Input format} & \textbf{Output formats} \\
+    \hline
+    SDF, MOL2 & TXT, MOL2 \\
+    \hline
+    PDB & TXT, PQR \\
+    \hline
+    mmCIF & TXT, PQR, mmCIF \\
+    \hline
+  \end{tabular}
+  \caption{ChargeFW2 output file formats.}
+  \label{table:chargefw2_output_formats}
+\end{table}
+
+As can be seen in Table \ref{table:chargefw2_output_formats}, ChargeFW2 already outputs a mmCIF file. However, the format of this mmCIF file stores the partial atomic charges in a custom \texttt{\_atom\_site.partial\_charge} item, and therefore, it is not compatible with the Mol* viewer, which expects the charges to be stored in the custom mmCIF categories described in Section \ref{section:custom_mmcif_categories}.
+
+The following subsections describe in detail how ChargeFW2 was modified to produce the custom mmCIF file format for all the input files, regardless of the input file format.
+
+\subsection*{mmCIF}
+
+For mmCIF input files, the program simply appends the custom categories to the input file. To add the categories, the program uses the GEMMI library \parencite{wojdyr2022gemmi} to parse the input mmCIF file into a \texttt{Block} object, which provides access to all mmCIF categories in the file. Before appending the charge categories, the program first removes alternative conformations from the \texttt{Block} object. This is necessary because the Mol* viewer does not support alternative conformations. The program then appends the custom charge categories to the \texttt{Block} object and writes the \texttt{Block} object to a new mmCIF file.
+
+\subsection*{PDB}
+
+The PDB input files are first converted to mmCIF format using the GEMMI library. To achieve this, the PDB file is first parsed into a \texttt{Structure} object, which is then converted into a \texttt{Block} object. After converting the PDB file to mmCIF, it was necessary to remove the \texttt{\_chem\_comp} category from the \texttt{Block} object. This category is generated by GEMMI by default, however, it is not necessary for the Mol* viewer and its presence causes the viewer to visualize the structure incorrectly. The program then proceeds in the same way as for the mmCIF input files.
+
+\subsection*{SDF and MOL2}
+
+Both SDF and MOL2 input files are converted to mmCIF format using the atom and bond data parsed from the input file. The program first creates an empty \texttt{Block} object, which it then populates with the \texttt{\_atom\_site} and \texttt{\_chem\_comp\_bond} categories. The program then proceeds in the same way as for the mmCIF input files.
+
+\subsection*{Summary}
+
+The ChargeFW2 was modified to produce a mmCIF file for each calculation, which is compatible with the Mol* viewer. The Table \ref{table:new_chargefw2_output_formats} lists the updated output file formats generated by ChargeFW2 for the corresponding input file formats.
+
+\begin{table}[htbp]
+  \centering
+  \begin{tabular}{|l|l|}
+    \hline
+    \textbf{Input format} & \textbf{Output formats} \\
+    \hline
+    SDF, MOL2 & TXT, mmCIF, MOL2 \\
+    \hline
+    PDB, mmCIF & TXT, mmCIF, PQR \\
+    \hline
+  \end{tabular}
+  \caption{Updated ChargeFW2 output file formats.}
+  \label{table:new_chargefw2_output_formats}
+\end{table}
 
 \section{Multicharge support}
 \label{section:multicharge_support}
 
-Apart from the changes to ChargeFW2, it was also necessary to modify the backend to support multiple charge sets. As already mentioned the backend is written in Python using the Flask framework. The backend is responsible for handling the file uploads, running the ChargeFW2 calculations, and returning the results to the frontend. 
+The ACC2 application allows the user to select the method and parameters that will be used to calculate the partial atomic charges for the user's input file. Once the user confirms their selection, the application sends it to the backend, which runs the ChargeFW2 program with the chosen method and parameters. The application then displays the results of the calculation to the user. However, the application only supports one calculation per request and does not support the visualization of multiple charge sets. This limitation was previously caused by the Litemol viewer, which only supported one charge set per structure. However, since the Mol* viewer supports multiple charge sets, the ACC2 application was modified to support multiple charge sets as well.
 
-\subsection{Backend changes}
-TODO: created a function for generating the charge sets on the backend
+The following subsections describe the necessary changes made to the ACC2 application to facilitate multiple calculations per one request and the visualization of multiple charge sets.
 
 \subsection{Frontend changes}
-TODO: created frontend UI for selecting the charges
+
+As previously explained in section \ref{section:multicharge_support}, the ACC2 application used to limit the user to selecting only one combination of method and parameters. This limitation was resolved by introducing new controls to the calculation setup.
+
+Figure \ref{fig:new_setup} shows the updated setup site for the ACC2 application. The site now contains a list of calculations, where each calculation represents a combination of method and parameters. The list is initially empty and the user can add a new calculation to the list by selecting the desired method and parameters from the drop-down menus and clicking the \textit{Add to calculation} button. The user can also remove any calculation from the list by clicking the cross button next to the calculation name. The list of calculations is then sent to the backend where it is used to generate the desired charge sets for the user's input file.
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=\textwidth]{figures/new_setup.png}
+  \end{center}
+  \caption{Updated setup site for the ACC2 application.}
+  \label{fig:new_setup}
+\end{figure}
+
+\subsection{Backend changes}
+
+The Flask backend of the ACC2 application was modified to support multiple calculations per request. The backend now receives a list of calculations from the frontend, which it uses to generate the desired charge sets for the user's input file. It does this by running the ChargeFW2 program for each calculation in the list. For each calculation the ChargeFW2 generates the output file formats described in Table \ref{table:new_chargefw2_output_formats}. The backend then parses the charge values from the output TXT file and stores them in a dictionary, creating a mapping between the charge set name and the charge values.
+
+After all the calculations have been completed, the dictionary is used to generate the mmCIF file. Firstly, the backend parses one of the output mmCIF files generated by ChargeFW2 into a \texttt{Block} object using the GEMMI library. The backend then iterates over dictionary and appends the charge values to the \texttt{Block} object under the custom charge categories. Lastly, the backend writes the \texttt{Block} object to a new mmCIF file, which is then sent to the frontend, where it is loaded into the Mol* viewer.
 
 \section{Mol* viewer integration}
+\label{section:viewer_integration}
+
+Figure \ref{fig:result_site} shows the result site for the ACC2 application with the Mol* viewer. The Mol* viewer is configured to load the mmCIF file generated by the backend. The site also contains a drop-down menu, which allows the user to chose which charge set to visualize.
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=\textwidth]{figures/result_site.png}
+  \end{center}
+  \caption{Result site for the ACC2 application with the Mol* viewer.}
+  \label{fig:result_site}
+\end{figure}
 
 \chapter{AlphaCharges}
 
-As described in \ref{subsection:alphacharges}, AlphaCharges is another web application for calculating partial atomic charges. The application shares the architecture with ACC2 on the backend and the frontend. The calculation of the partial atomic charges is done by the SQe+ method.jpo
+As described in \ref{subsection:alphacharges}, AlphaCharges ($\alpha\text{Charges}$) is another web application for calculating partial atomic charges. The application shares the architecture with ACC2 on the backend and the frontend. The calculation of the partial atomic charges is done by the SQe+ method.jpo
 
 \section{Viewer extension}
 
+Most of the features required by the AlphaCharges application were already implemented in the Mol* viewer for ACC2. However, there were some additional features that needed to be implemented to support the AlphaCharges application. These features include:
+
+\begin{itemize}
+  \item \textbf{AlphaFold coloring}: The application allows the user to color the structure based on the AlphaFold confidence score.
+  \item \textbf{Focus on atoms}: The application does not work for some structures. In such cases, the calculation fails and the user is presented with an error message. The user is also able to select the atoms that caused the error and focus on them.
+\end{itemize}
+
 \section{Mol* viewer integration}
+
+\section{Wrong structure}
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=12cm]{figures/wrong_structure_focus.png}
+  \end{center}
+  \caption{Focus on the atom \textit{GLN 33 CD}, one of two problematic atoms in the structure with UniProt code Q55GB6.}
+  \label{fig:wrong_structure_focus}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=12cm]{figures/wrong_structure_text.png}
+  \end{center}
+  \caption{Explanation for error of atom \textit{GLN 33 CD}.}
+  \label{fig:wrong_structure_text}
+\end{figure}
+
 
 \chapter*{Conclusion}
 \markright{\textsc{Conclusion}}
