fix: alpha symbol broke compilation

--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -117,6 +117,7 @@
 \usepackage[babel]{csquotes} %% Context-sensitive quotation marks
 \usepackage{minted}
 \usepackage{subfigure}
+\usepackage{textalpha}
 
 \begin{document}
 
@@ -213,12 +214,7 @@ ChargeFW2 is a program for calculating partial atomic charges of molecules. It u
 \subsection{AlphaCharges}
 \label{subsection:alphacharges}
 
-AlphaCharges ($\alpha\text{Charges}$) is a web application for calculating partial atomic charges of molecules. 
-
-\section{GEMMI}
-\label{section:gemmi}
-
-GEMMI is a cross-platform library that provides various tools useful in the field of structural biology. One of these tools is a parser for the mmCIF format, which is used to read and write mmCIF files. The library is written in C++ and has Python bindings. \parencite{wojdyr2022gemmi}
+AlphaCharges (αCharges) is a web application for calculating partial atomic charges of molecules. \parencite{schindler2023alphacharges}
 
 \section{Color interpolation}
 \label{section:color_interpolation}
