--- a/main.bib
+++ b/main.bib
@@ -80,3 +80,18 @@
   title     = {GEMMI: A library for structural biology},
   journal   = {Journal of Open Source Software}
 } 
+
+% schindler2023alphacharges
+@article{schindler2023alphacharges,
+  author   = {Schindler, Ondřej and Berka, Karel and Cantara, Alessio and Křenek, Aleš and Tichý, Dominik and Raček, Tomáš and Svobodová, Radka},
+  title    = {{αCharges: partial atomic charges for AlphaFold structures in high quality}},
+  journal  = {Nucleic Acids Research},
+  year     = {2023},
+  month    = {05},
+  abstract = {{The AlphaFold2 prediction algorithm opened up the possibility of exploring proteins’ structural space at an unprecedented scale. Currently, \\&gt;200 million protein structures predicted by this approach are deposited in AlphaFoldDB, covering entire proteomes of multiple organisms, including humans. Predicted structures are, however, stored without detailed functional annotations describing their chemical behaviour. Partial atomic charges, which map electron distribution over a molecule and provide a clue to its chemical reactivity, are an important example of such data. We introduce the web application αCharges: a tool for the quick calculation of partial atomic charges for protein structures from AlphaFoldDB. The charges are calculated by the recent empirical method SQE+qp, parameterised for this class of molecules using robust quantum mechanics charges (B3LYP/6-31G*/NPA) on PROPKA3 protonated structures. The computed partial atomic charges can be downloaded in common data formats or visualised via the powerful Mol* viewer. The αCharges application is freely available at https://alphacharges.ncbr.muni.cz with no login requirement.}},
+  issn     = {0305-1048},
+  doi      = {10.1093/nar/gkad349},
+  url      = {https://doi.org/10.1093/nar/gkad349},
+  note     = {gkad349},
+  eprint   = {https://academic.oup.com/nar/advance-article-pdf/doi/10.1093/nar/gkad349/50252244/gkad349.pdf}
+}
