--- a/main.bib
+++ b/main.bib
@@ -95,3 +95,90 @@
   note     = {gkad349},
   eprint   = {https://academic.oup.com/nar/advance-article-pdf/doi/10.1093/nar/gkad349/50252244/gkad349.pdf}
 }
+
+% jumper2021alphafold
+@article{jumper2021alphafold,
+  author   = {Jumper, John
+              and Evans, Richard
+              and Pritzel, Alexander
+              and Green, Tim
+              and Figurnov, Michael
+              and Ronneberger, Olaf
+              and Tunyasuvunakool, Kathryn
+              and Bates, Russ
+              and {\v{Z}}{\'{\i}}dek, Augustin
+              and Potapenko, Anna
+              and Bridgland, Alex
+              and Meyer, Clemens
+              and Kohl, Simon A. A.
+              and Ballard, Andrew J.
+              and Cowie, Andrew
+              and Romera-Paredes, Bernardino
+              and Nikolov, Stanislav
+              and Jain, Rishub
+              and Adler, Jonas
+              and Back, Trevor
+              and Petersen, Stig
+              and Reiman, David
+              and Clancy, Ellen
+              and Zielinski, Michal
+              and Steinegger, Martin
+              and Pacholska, Michalina
+              and Berghammer, Tamas
+              and Bodenstein, Sebastian
+              and Silver, David
+              and Vinyals, Oriol
+              and Senior, Andrew W.
+              and Kavukcuoglu, Koray
+              and Kohli, Pushmeet
+              and Hassabis, Demis},
+  title    = {Highly accurate protein structure prediction with AlphaFold},
+  journal  = {Nature},
+  year     = {2021},
+  month    = {Aug},
+  day      = {01},
+  volume   = {596},
+  number   = {7873},
+  pages    = {583--589},
+  abstract = {Proteins are essential to life, and understanding their structure can facilitate a mechanistic understanding of their function. Through an enormous experimental effort1--4, the structures of around 100,000 unique proteins have been determined5, but this represents a small fraction of the billions of known protein sequences6,7. Structural coverage is bottlenecked by the months to years of painstaking effort required to determine a single protein structure. Accurate computational approaches are needed to address this gap and to enable large-scale structural bioinformatics. Predicting the three-dimensional structure that a protein will adopt based solely on its amino acid sequence---the structure prediction component of the `protein folding problem'8---has been an important open research problem for more than 50 years9. Despite recent progress10--14, existing methods fall far short of atomic accuracy, especially when no homologous structure is available. Here we provide the first computational method that can regularly predict protein structures with atomic accuracy even in cases in which no similar structure is known. We validated an entirely redesigned version of our neural network-based model, AlphaFold, in the challenging 14th Critical Assessment of protein Structure Prediction (CASP14)15, demonstrating accuracy competitive with experimental structures in a majority of cases and greatly outperforming other methods. Underpinning the latest version of AlphaFold is a novel machine learning approach that incorporates physical and biological knowledge about protein structure, leveraging multi-sequence alignments, into the design of the deep learning algorithm.},
+  issn     = {1476-4687},
+  doi      = {10.1038/s41586-021-03819-2},
+  url      = {https://doi.org/10.1038/s41586-021-03819-2}
+}
+
+% schindler2021sqe
+@article{schindler2021sqe,
+  author   = {Schindler, Ond{\v{r}}ej
+              and Ra{\v{c}}ek, Tom{\'a}{\v{s}}
+              and Mar{\v{s}}avelski, Aleksandra
+              and Ko{\v{c}}a, Jaroslav
+              and Berka, Karel
+              and Svobodov{\'a}, Radka},
+  title    = {Optimized SQE atomic charges for peptides accessible via a web application},
+  journal  = {Journal of Cheminformatics},
+  year     = {2021},
+  month    = {Jun},
+  day      = {30},
+  volume   = {13},
+  number   = {1},
+  pages    = {45},
+  abstract = {Partial atomic charges find many applications in computational chemistry, chemoinformatics, bioinformatics, and nanoscience. Currently, frequently used methods for charge calculation are the Electronegativity Equalization Method (EEM), Charge Equilibration method (QEq), and Extended QEq (EQeq). They all are fast, even for large molecules, but require empirical parameters. However, even these advanced methods have limitations---e.g., their application for peptides, proteins, and other macromolecules is problematic. An empirical charge calculation method that is promising for peptides and other macromolecular systems is the Split-charge Equilibration method (SQE) and its extension SQE+q0. Unfortunately, only one parameter set is available for these methods, and their implementation is not easily accessible.},
+  issn     = {1758-2946},
+  doi      = {10.1186/s13321-021-00528-w},
+  url      = {https://doi.org/10.1186/s13321-021-00528-w}
+}
+
+% kraulis1991molscript
+@article{kraulis1991molscript,
+  author   = {Kraulis, P. J.},
+  title    = {{{\it MOLSCRIPT}: a program to produce both detailed and schematic plots of protein structures}},
+  journal  = {Journal of Applied Crystallography},
+  year     = {1991},
+  volume   = {24},
+  number   = {5},
+  pages    = {946--950},
+  month    = {Oct},
+  doi      = {10.1107/S0021889891004399},
+  url      = {https://doi.org/10.1107/S0021889891004399},
+  abstract = {The {\it MOLSCRIPT} program produces plots of protein structures using several different kinds of representations. Schematic drawings, simple wire models, ball-and-stick models, CPK models and text labels can be mixed freely. The schematic drawings are shaded to improve the illusion of three dimensionality. A number of parameters affecting various aspects of the objects drawn can be changed by the user. The output from the program is in PostScript format.}
+}
